# Nano

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  jsconfig.json
assets/mods/: user_mod.js
assets/scripts/: fire_behavior.js
common/: Cargo.toml
common/assets/common/mesh/: default_rectangle.json
common/assets/common/src/: nano.lua
common/assets/lua/lib/std/: nano.lua
common/assets/lua/lib/std/ref/: log.lua
common/assets/mesh/common/: default_box.json
common/src/: lib.rs
common/src/assets/: assets.rs  game_assets.rs
common/src/components/: game.rs  lua_script.rs  materials.rs  mesh.rs  mod.rs  model.rs  position.rs  scene.rs
common/src/scritping/: lua_script_core.rs  mod.rs
docs/: ARCHITECTURE.md  DEPENDENCYS.md  Errors.md  FEATURES.md  GAMEDESIGNE.md  README.md  TODO.md
docs/protocols/: 02-04-2026.md  09-04-2026.md  16-04-2026.md  27-03-2026.md
docs/scense/: SCENE.md
editor/: Cargo.toml
editor/assets/: game.json
editor/src/: main.rs
editor/src/ui/: editor_ui.rs  mod.rs
game/: Cargo.toml  build.rs  index.html
game/assets/: game.json
game/assets/level/: map_test.json
game/assets/lua/: test.lua
game/assets/materials/2d/: rock_material_2d.json
game/assets/materials/3d/: rock_material_3d.json
game/assets/models/: rock.json
game/assets/objects/: ob_test.json
game/src/: main.rs
game/src/assets/: game_assets.rs
game/src/player/: mod.rs  player.rs  player_plugin.rs
game/src/tests/: mod.rs
game/src/tests/game/: game_test.rs
game/src/world/: level_render.rs  mod.rs
mods/: nano-api.d.ts  testmod.js
protokoll/: 30-04-2026.md
src/: main.rs  render.rs  world.rs
src/components/: mod.rs  vectors.rs
src/elements/: elements.rs
src/input/: controller.rs
src/player/: mod.rs  player.rs  player_plugin.rs
src/script/: js_executor.rs  mod.rs  mod_loader.rs
src/tests/: mod.rs
