[workspace]
resolver = "3"
members = [
    "common", 
    "editor",
    "game"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HamburgBigJ"]

[workspace.dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



common = { path = "common" }


[profile.release]
lto = true
opt-level = 's'
codegen-units = 1