[workspace]
resolver = "3"
members = [
    "common", 
    "editor",
    "game"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HamburgBigJ"]

[workspace.dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.65"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
image = "0.25.10"

common = { path = "common" }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
