[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-net = { workspace = true }
wasm-bindgen-futures = { workspace = true }