[package]
name = "editor"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# Change this line:
common = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
globset = { workspace = true }
include-flate = { workspace = true }