[package]
name = "game"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { workspace = true }
bevy = { workspace = true }

# only for the game editor excludet
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"