[package]
name = "game"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-net = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

# only for the game editor excludet
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"